# bevy_tuto

./: Cargo.toml  README.md
src/: events.rs  main.rs  player.rs
src/plugins/map/: map_creator.rs  map_plugin.rs  mod.rs
