[package]
name = "bevy_tuto"
version = "0.1.0"
authors = ["Luc Bergeron <psyluche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
simdnoise = "3.1.6"
bmp = "0.5.0"
rand = "0.7.3"