[package]
name = "bevy_tuto"
version = "0.1.0"
authors = ["Luc Bergeron <psyluche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_tilemap = "0.4"
simdnoise = "3.1.6"
bmp = "0.5.0"
rand = "0.8.3"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
